[package]
name = "natural-date-parser"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A parser that converts natural language date and time expressions into Rust-compatible DateTime formats."


[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
chronoutil = "0.2.7"
pest = "2.8.2"
pest_derive = "2.8.2"
thiserror = "2.0.16"
