[package]
name = "natural-date-parser"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "A parser that converts natural language date and time expressions into Rust-compatible DateTime formats."
authors = ["Sofiia Budilova <https://github.com/koejdga>"]
repository = "https://github.com/koejdga/natural-date-parser"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
chronoutil = "0.2.7"
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.3"
