[package]
name = "natural-date-parser"
version = "0.1.3"
edition = "2024"
license = "MIT"
description = "A parser that converts natural language date and time expressions into Rust-compatible DateTime formats."
authors = ["Sofiia Budilova <https://github.com/koejdga>"]
repository = "https://github.com/koejdga/natural-date-parser"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
chronoutil = "0.2.7"
pest = "2.8.2"
pest_derive = "2.8.2"
thiserror = "2.0.16"
